--- a/src/main/resources/templates/SecretaryDashboard.html
+++ b/src/main/resources/templates/SecretaryDashboard.html
@@ -1,17 +1,22 @@
+<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>clinic management system</title>
     <meta name="description" content="None">
     <meta name="author" content="">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="asset/css/styles.css">
+
+
+
+
 </head>
 
 <body>
@@ -21,8 +26,7 @@
         <nav id="ikbj" class="navbar navbar-expand-lg navbar-light bg-light hero-plain-navbar no-bg fixed-top">
             <div id="i7rf" class="container"><a href="#" class="navbar-brand"><span id="i1smt" class="font-weight-bold ml-1 pt-3"><b></b></span></a><button type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span
-                        class="navbar-toggler-icon"> </span></button>
-                        
+                        class="navbar-toggler-icon"></span></button>
                 <div id="navbarResponsive" class="collapse navbar-collapse">
                     <ul id="iw16r" class="navbar-nav ms-auto">
                         <li id="ix6dt" class="nav-item active"></li>
@@ -32,35 +36,33 @@
                         <li class="nav-item me-md-2"></li>
                     </ul>
                 </div>
-                
             </div>
         </nav>
+        <div id="is0uv" class="col-4 text-center"></div>
     </section>
-    <section id="i2a5" class="py-5">
+    <section id="i2a5" class="py-5"><a  id="iwmjn" class="blog-header-logo text-dark">Secretary Portal</a>
+        <nav id="i9hgi" class="nav d-flex justify-content-between"><a href="#" id="iaayo" class="p-2 text-muted"><i id="igqv2">Patient&#039;s Reservations</i></a><a href="#" id="ioq74"
+                class="p-2 text-muted">Patients Profile</a><a href="#" id="i2qcm" class="p-2 text-muted">Logout</a></nav>
+        <div id="i2l2f" class="col-4 pt-1"></div>
         <div id="ipwbs" class="container">
-            <div class="row">
-                <div class="col-lg-10 col-xl-9 mx-auto">
-                    <div class="card card-signin-simple flex-row my-5">
-                        <div class="card-body">
-                            <h5 class="card-title text-center" id="ihszk">Login</h5>
-                            <form method="POST" action="/login" class="form-signin-simple">
-						User Name :  <input type="text" name="username" placeholder="Username" required autofocus class="form-control"/><br><br>
-							 
-                                
-						Password  :	  <input type="password" name="password" placeholder="Password" required class="form-control"/><br><br>
-							
-                               
-							<input type="submit" name="Login"/>
-							
-							</form>
-							</center>
-					     
-                        </div>
+            <div id="ihz2h" class="row">
+                <h1 id="iojbv" class="display-1">welcome Secretary</h1>
+                <div id="i7i3g" class="col-lg-10 col-xl-9 mx-auto">
+                    <div id="ihq6n" class="row flex-nowrap justify-content-between align-items-center">
+                        <div class="col-4 d-flex justify-content-end align-items-center"><a href="#" class="text-muted"></a></div>
                     </div>
+                    <div class="card card-signin-simple flex-row my-5"></div>
                 </div>
             </div>
         </div>
     </section>
-    </body>
+    <div id="i3yfo" class="container blog-header-outer">
+        <header class="blog-header py-3"></header>
+        <div class="nav-scroller py-1 mb-2"></div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="assets/js/app.js"></script>
+</body>
 
 </html>
