--- a/src/main/resources/templates/PatientDashBoard.html
+++ b/src/main/resources/templates/PatientDashBoard.html
@@ -41,7 +41,7 @@
         <div class="col-4 text-center" id="is0uv"><a href="#" class="blog-header-logo text-dark" id="iwmjn">Patient Portal</a></div>
     </section>
     <nav class="nav d-flex justify-content-between" id="i9hgi"><a href="#" class="p-2 text-muted" id="iaayo"><i>Profile</i></a><a href="#" class="p-2 text-muted" id="ioq74">Reserve an
-            Appointment</a><a href="#" class="p-2 text-muted" id="i2qcm">Logout</a></nav>
+            Appointment</a><a href="/home" th:action="@{/home}" class="p-2 text-muted" id="i2qcm">Logout</a></nav>
     <section id="i2a5" class="py-5">
         <div class="col-4 pt-1" id="i2l2f"></div>
         <div id="ipwbs" class="container">
