--- a/src/main/resources/templates/SecretaryDashboard.html
+++ b/src/main/resources/templates/SecretaryDashboard.html
@@ -12,11 +12,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="asset/css/styles.css">
-
-
-
-
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -42,7 +38,7 @@
     </section>
     <section id="i2a5" class="py-5"><a  id="iwmjn" class="blog-header-logo text-dark">Secretary Portal</a>
         <nav id="i9hgi" class="nav d-flex justify-content-between"><a href="#" id="iaayo" class="p-2 text-muted"><i id="igqv2">Patient&#039;s Reservations</i></a><a href="#" id="ioq74"
-                class="p-2 text-muted">Patients Profile</a><a href="#" id="i2qcm" class="p-2 text-muted">Logout</a></nav>
+                class="p-2 text-muted">Patients Profile</a><a href="/home" th:action="@{/home}"  id="i2qcm" class="p-2 text-muted">Logout</a></nav>
         <div id="i2l2f" class="col-4 pt-1"></div>
         <div id="ipwbs" class="container">
             <div id="ihz2h" class="row">
