--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,7 +50,7 @@
 						Password  :	  <input type="password" name="password" placeholder="Password" required class="form-control"/><br><br>
 							
                                
-							<input type="submit" name="Login"/>
+							<input type="submit" value="Login"/>
 							
 							</form>
 							</center>
